RESOLVED FIXED80150
[GTK] Invalid check in webkit_web_view_set_zoom_level() when zoom-text-only is enabled
https://bugs.webkit.org/show_bug.cgi?id=80150
Summary [GTK] Invalid check in webkit_web_view_set_zoom_level() when zoom-text-only i...
Carlos Garcia Campos
Reported 2012-03-02 05:00:55 PST
We are always comparing with the page zoom factor to check whether zoom level changed or not
Attachments
Patch (1.66 KB, patch)
2012-03-02 05:03 PST, Carlos Garcia Campos
pnormand: review+
Carlos Garcia Campos
Comment 1 2012-03-02 05:03:42 PST
WebKit Review Bot
Comment 2 2012-03-02 05:05:24 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3 2012-03-02 08:31:14 PST
Note You need to log in before you can comment on or make changes to this bug.