[GTK] Invalid check in webkit_web_view_set_zoom_level() when zoom-text-only is enabled https://bugs.webkit.org/show_bug.cgi?id=80150

Reviewed by Philippe Normand.

* UIProcess/API/gtk/WebKitWebView.cpp:
(webkit_web_view_set_zoom_level): Use
webkit_web_view_get_zoom_level() instead of
WKPageGetPageZoomFactor() to get the current effective zoom level
depending on zoom-text-only setting.

Canonical link: https://commits.webkit.org/97254@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109578 268f45cc-cd09-0410-ab3c-d52691b4dbfc